--- a/assets/style.css
+++ b/assets/style.css
@@ -49,6 +49,74 @@ table {
 	border-spacing: 0;
 }
 
+/*Splash*/
+
+#splash{
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	color: white;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+#splash-background{
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	background-image: url("./images/flag.jpg");
+	background-size: cover;
+	opacity: .8;
+}
+
+#splash-title{
+	font-size: 80px;
+	font-weight: bolder;
+	color: black;
+	text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+#splash-eagle{
+	display: block;
+	height: 200px;
+	width: 200px;
+	margin-top: 25px;
+	margin-bottom: 225px;
+	border-radius: 500px;
+	background-image: url("./images/eagle.jpg");
+	background-position: -60px;
+	background-size: cover;
+}
+
+.none{
+	display: none !important;
+}
+
+.heckyeah {
+	width: 100vw;
+	position: fixed;
+	text-align: center;
+	opacity: 0;
+	top: 40%;
+	font-size: 80px;
+	font-weight: bolder;
+	color: red;
+	z-index: -1;
+}
+
+.fadeInOut {
+	-webkit-animation: fades 1.5s; /* Safari 4.0 - 8.0 */
+	animation: fades 1.5s;
+}
+
+@keyframes fades {
+    0%   {opacity: 0; z-index: 2;}
+    50%  {opacity: 1; z-index: 2;}
+    100% {opacity: 0; z-index: 2;}
+}
+
 /*Display*/
 
 #display{
@@ -88,7 +156,14 @@ table {
 
 #filter-form-filters {
 	display: flex;
+	justify-content: flex-end;
+	padding: 0 25px 0 25px;
 }
+
+#filter-form-filters > * {
+	padding: 0 15px 0 15px;
+}
+
 
 /*d3*/
 
